--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "index.js",
   "scripts": {
     "knex": "knex",
-    "dev": "nodemon index",
-    "start": "node index",
+    "dev": "nodemon index & webpack --watch",
+    "start": "node server & webpack --watch",
     "test": "jest --watchAll"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ]
   },
   "repository": {
     "type": "git",
@@ -20,13 +26,28 @@
   },
   "homepage": "https://github.com/dev-academy-challenges/boilerplate-express-api#readme",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.1.4",
     "nodemon": "^1.14.12",
+    "react": "^16.2.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "sqlite3": "^3.1.13",
-    "supertest": "^3.0.0"
+    "superagent": "^3.8.2",
+    "supertest": "^3.0.0",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bundle-js": "^1.0.2",
     "express": "^4.16.2",
     "knex": "^0.14.2"
   }
